--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,8 @@ ul.navbar-nav {
 	margin: 20px 0 10px 0;
 }
 
-.top-content .description p { opacity: 0.8; }
+.top-content .description p { opacity: 0.8; 
+	font-size: 20px;}
 
 .timer {
     margin-top: 50px;
@@ -185,9 +186,16 @@ ul.navbar-nav {
 .timer .days-wrapper,
 .timer .hours-wrapper,
 .timer .minutes-wrapper,
-.timer .seconds-wrapper {
+.timer .seconds-wrapper,
+.countdown .years-wrapper,
+.countdown .mouths-wrapper,
+.countdown .days-wrapper,
+.countdown .hours-wrapper,
+.countdown .minutes-wrapper,
+.countdown .seconds-wrapper{
     display: inline-block;
 }
+
 .timer .years,
 .timer .mouths,
 .timer .days,
@@ -198,8 +206,23 @@ ul.navbar-nav {
     font-weight: 100;
     line-height: 90px;
 }
+.countdown{
+	margin-top: 20px;
+	}
+.countdown .years,
+.countdown .mouths,
+.countdown .days,
+.countdown .hours,
+.countdown .minutes,
+.countdown .seconds {
+    font-size: 40px;
+    font-weight: 100;
+    line-height: 50px;
+}
 
-.timer .t-text { opacity: 0.8; }
+.timer .t-text,
+.countdown .t-text
+{ opacity: 0.8; }
 
 .subscribe {
 	position: relative;
@@ -231,6 +254,10 @@ ul.navbar-nav {
 	padding-bottom: 30px;
 }
 
+/* .features p{
+	font-size: 20px;
+} */
+
 .features-box {
 	padding-top: 15px;
 	padding-bottom: 15px;
@@ -249,6 +276,10 @@ ul.navbar-nav {
 	color: #F3F3F3;
 }
 
+.title{
+	margin-top: 0px;
+}
+
 /***** Footer *****/
 
 footer {
@@ -257,3 +288,6 @@ footer {
 
 .footer-copyright a { color: #888; border-bottom: 1px solid #ddd; }
 .footer-copyright a:hover, .footer-copyright a:focus { color: #888; border: 0; }
+.myinfo{
+	display: none;
+}
