--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -28,7 +28,9 @@
 	body { text-align: center; }
 	
 	.navbar { padding-top: 0; }
-	.navbar.navbar-no-bg { background: #333; background: rgba(51, 51, 51, 0.9); }
+	.navbar.navbar-no-bg { background: #333; 
+	/* background: rgba(51, 51, 51, 0.9); */
+	 background:#f0d784e6}
 	.navbar>.container .navbar-brand { height: 80px; margin-left: 15px; }
 	.navbar-collapse { border: 0; }
 	.navbar-toggle { margin-top: 22px; }
